{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 37,
  "lineage": "10a5b760-3a5a-a93c-edf0-0ab632cf00e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:977802677540:loadbalancer/app/lb-lab/9074e5f403d29b1e",
            "arn_suffix": "app/lb-lab/9074e5f403d29b1e",
            "dns_name": "lb-lab-565579925.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:977802677540:loadbalancer/app/lb-lab/9074e5f403d29b1e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-lab",
            "security_groups": [
              "sg-0448e92c91d99e09d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09597d55"
              },
              {
                "subnet_id": "subnet-0c746903"
              },
              {
                "subnet_id": "subnet-43432c7d"
              }
            ],
            "subnets": [
              "subnet-09597d55",
              "subnet-0c746903",
              "subnet-43432c7d"
            ],
            "vpc_id": "vpc-b9fd89c3",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_subnet.default_subnet_c",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977802677540:subnet/subnet-09597d55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-09597d55",
            "map_public_ip_on_launch": true,
            "owner_id": "977802677540",
            "vpc_id": "vpc-b9fd89c3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977802677540:subnet/subnet-0c746903",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.31.64.0/20",
            "id": "subnet-0c746903",
            "map_public_ip_on_launch": true,
            "owner_id": "977802677540",
            "vpc_id": "vpc-b9fd89c3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977802677540:subnet/subnet-43432c7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.31.48.0/20",
            "id": "subnet-43432c7d",
            "map_public_ip_on_launch": true,
            "owner_id": "977802677540",
            "vpc_id": "vpc-b9fd89c3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977802677540:vpc/vpc-b9fd89c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-a24b94df",
            "default_route_table_id": "rtb-db7083a5",
            "default_security_group_id": "sg-957c20c8",
            "dhcp_options_id": "dopt-5ffced24",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-b9fd89c3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-db7083a5",
            "owner_id": "977802677540"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:977802677540:listener/app/lb-lab/9074e5f403d29b1e/bd30a3efffae88d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:977802677540:targetgroup/target-group/9bd06c0ce599d710",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:977802677540:listener/app/lb-lab/9074e5f403d29b1e/bd30a3efffae88d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:977802677540:loadbalancer/app/lb-lab/9074e5f403d29b1e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_default_vpc.default_vpc",
            "aws_lb_target_group.target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:977802677540:targetgroup/target-group/9bd06c0ce599d710",
            "arn_suffix": "targetgroup/target-group/9bd06c0ce599d710",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:977802677540:targetgroup/target-group/9bd06c0ce599d710",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-b9fd89c3"
          },
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977802677540:security-group/sg-0448e92c91d99e09d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0448e92c91d99e09d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200708172646518500000001",
            "name_prefix": null,
            "owner_id": "977802677540",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-b9fd89c3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977802677540:security-group/sg-05da3a8088e1d10f3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05da3a8088e1d10f3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0448e92c91d99e09d"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20200708180254697600000001",
            "name_prefix": null,
            "owner_id": "977802677540",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-b9fd89c3"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}